Add sample project

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,12 @@ jobs:
           ls
           ./gradlew lint
 
+      - uses: actions/upload-artifact@v2
+          with:
+            name: lint-artifacts
+            path: app/build/reports/
+
+
       - name: test
         run: |
           ./gradlew test
